--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 .animal {
 	height: 90px;
-	position: absolute;
+	position: relative;
+	z-index: 2;
 }
 
 .chicken-coop {
@@ -18,13 +19,23 @@ body {
 	text-align: center;
 	color: white;
 	border: 8px solid black;
-	height: 200px;
-	width: 200px;
+	height: 250px;
+	width: 250px;
 	position: absolute;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+	z-index: 1;
 
 	margin: auto;
+}
+
+.egg {
+	margin: 0 auto;
+	height: 250px;
+}
+
+.goldegg {
+	height: 180px;
 }
